--- a/bitcamp-java-basic/build.gradle
+++ b/bitcamp-java-basic/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+
+implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.0'
+
     implementation 'com.google.guava:guava:29.0-jre'
 
     testImplementation 'junit:junit:4.13'
