--- a/bitcamp-java-project-client/build.gradle
+++ b/bitcamp-java-project-client/build.gradle
@@ -23,6 +23,8 @@ repositories {
 }
 
 dependencies {
+//Mybatis 퍼시스턴스 프레임워크
+implementation 'org.mybatis:mybatis:3.5.6'
 //MariaDB JDBC 드라이버
 implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.0'
 // JSON 라이브러리
