--- a/bitcamp-web-project/src/main/webapp/WEB-INF/web.xml
+++ b/bitcamp-web-project/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,17 @@
     <param-value>1111</param-value>
   </context-param>
  -->
+ 
+ <context-param>
+    <param-name>encoding</param-name>
+    <param-value>UTF-8</param-value>
+ </context-param>
+ 
+ <context-param>
+    <param-name>aaa</param-name>
+    <param-value>okok</param-value>
+ </context-param>
+ 
 <!-- 리스너 등록 -->
 <!--  
   <listener>
@@ -47,6 +58,23 @@
     <url-pattern>/ex02/s1</url-pattern>
   </filter-mapping>
 -->
+<filter>
+  <filter-name>f1</filter-name>
+  <filter-class>com.eomcs.web.ex06.Filter01</filter-class>
+  <init-param>
+    <param-name>encoding</param-name>
+    <param-value>UTF-8</param-value>
+  </init-param>
+  <init-param>
+    <param-name>aaa</param-name>
+    <param-value>okok</param-value>
+  </init-param>
+</filter>
+<filter-mapping>
+  <filter-name>f1</filter-name>
+  <url-pattern>/ex05/*</url-pattern>
+</filter-mapping>
+
 <!-- 서블릿 등록 -->
   <servlet>
     <servlet-name>s01</servlet-name>
