--- a/bitcamp-java-project-server/build.gradle
+++ b/bitcamp-java-project-server/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+// Thumbnailator 썸네일 생성 라이브러리
+    implementation 'net.coobird:thumbnailator:0.4.13'
 
 compile 'javax.servlet:javax.servlet-api:4.0.1'
     // Mybatis 퍼시스턴스 프레임워크
